# ecommerce_supplier

./: .env.example  .gitignore  Makefile  README.md  SETUP.md  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  analysis_agent.py  browser_agent.py  report_agent.py
config/: settings.py
core/: __init__.py  cli.py  llm.py  logger.py  models.py  orchestrator.py
templates/: report.html.j2
tests/: test_models.py  test_report_render.py
