[tool.poetry]
name = "meesho-agent"
version = "0.1.0"
description = "AI-powered multi-agent system for Meesho supplier dashboard monitoring and business reporting"
authors = ["Shubham <shubham@data_ngineer>"]
readme = "README.md"
license = "MIT"
packages = [{include = "agents"}, {include = "core"}, {include = "utils"}, {include = "config"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.44.0"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-anthropic = "^0.1.0"
langgraph = "^0.1.0"
openai = "^1.30.0"
anthropic = "^0.28.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.2.0"
pandas = "^2.2.0"
jinja2 = "^3.1.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-dotenv = "^1.0.0"
aiosmtplib = "^3.0.0"
email-validator = "^2.1.0"
reportlab = "^4.2.0"
weasyprint = "^62.3"
schedule = "^1.2.0"
loguru = "^0.7.0"
rich = "^13.7.0"
typer = "^0.12.0"
httpx = "^0.27.0"
tenacity = "^8.3.0"
python-dateutil = "^2.9.0"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-playwright = "^0.5.0"
black = "^24.4.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
ipython = "^8.24.0"

[tool.poetry.scripts]
meesho-agent = "core.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
